增加path配置界面