@@ -4,8 +4,6 @@ import com.cool.request.common.bean.components.controller.Controller;
 
 import java.io.File;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
@@ -82,177 +80,10 @@ public class StringUtils {
         return sb.toString();
     }
 
-    public static String cleanPath(String path) {
-        if (!hasLength(path)) {
-            return path;
-        }
-
-        String normalizedPath = replace(path, WINDOWS_FOLDER_SEPARATOR, FOLDER_SEPARATOR);
-        String pathToUse = normalizedPath;
-
-        // Shortcut if there is no work to do
-        if (pathToUse.indexOf('.') == -1) {
-            return pathToUse;
-        }
-
-        // Strip prefix from path to analyze, to not treat it as part of the
-        // first path element. This is necessary to correctly parse paths like
-        // "file:core/../core/io/Resource.class", where the ".." should just
-        // strip the first "core" directory while keeping the "file:" prefix.
-        int prefixIndex = pathToUse.indexOf(':');
-        String prefix = "";
-        if (prefixIndex != -1) {
-            prefix = pathToUse.substring(0, prefixIndex + 1);
-            if (prefix.contains(FOLDER_SEPARATOR)) {
-                prefix = "";
-            } else {
-                pathToUse = pathToUse.substring(prefixIndex + 1);
-            }
-        }
-        if (pathToUse.startsWith(FOLDER_SEPARATOR)) {
-            prefix = prefix + FOLDER_SEPARATOR;
-            pathToUse = pathToUse.substring(1);
-        }
-
-        String[] pathArray = delimitedListToStringArray(pathToUse, FOLDER_SEPARATOR);
-        // we never require more elements than pathArray and in the common case the same number
-        Deque<String> pathElements = new ArrayDeque<>(pathArray.length);
-        int tops = 0;
-
-        for (int i = pathArray.length - 1; i >= 0; i--) {
-            String element = pathArray[i];
-            if (CURRENT_PATH.equals(element)) {
-                // Points to current directory - drop it.
-            } else if (TOP_PATH.equals(element)) {
-                // Registering top path found.
-                tops++;
-            } else {
-                if (tops > 0) {
-                    // Merging path element with element corresponding to top path.
-                    tops--;
-                } else {
-                    // Normal path element found.
-                    pathElements.addFirst(element);
-                }
-            }
-        }
-
-        // All path elements stayed the same - shortcut
-        if (pathArray.length == pathElements.size()) {
-            return normalizedPath;
-        }
-        // Remaining top paths need to be retained.
-        for (int i = 0; i < tops; i++) {
-            pathElements.addFirst(TOP_PATH);
-        }
-        // If nothing else left, at least explicitly point to current path.
-        if (pathElements.size() == 1 && pathElements.getLast().isEmpty() && !prefix.endsWith(FOLDER_SEPARATOR)) {
-            pathElements.addFirst(CURRENT_PATH);
-        }
-
-        final String joined = collectionToDelimitedString(pathElements, FOLDER_SEPARATOR);
-        // avoid string concatenation with empty prefix
-        return prefix.isEmpty() ? joined : prefix + joined;
-    }
-
-    public static String collectionToDelimitedString(Collection<?> coll, String delim) {
-        return collectionToDelimitedString(coll, delim, "", "");
-    }
-
-    public static String collectionToCommaDelimitedString(Collection<?> coll) {
-        return collectionToDelimitedString(coll, ",");
-    }
-
-    public static String collectionToDelimitedString(Collection<?> coll, String delim, String prefix, String suffix) {
-
-        if (CollectionUtils.isEmpty(coll)) {
-            return "";
-        }
-
-        int totalLength = coll.size() * (prefix.length() + suffix.length()) + (coll.size() - 1) * delim.length();
-        for (Object element : coll) {
-            totalLength += String.valueOf(element).length();
-        }
-
-        StringBuilder sb = new StringBuilder(totalLength);
-        Iterator<?> it = coll.iterator();
-        while (it.hasNext()) {
-            sb.append(prefix).append(it.next()).append(suffix);
-            if (it.hasNext()) {
-                sb.append(delim);
-            }
-        }
-        return sb.toString();
-    }
-
-    public static String[] delimitedListToStringArray(String str, String delimiter) {
-        return delimitedListToStringArray(str, delimiter, null);
-    }
-
-    public static String[] delimitedListToStringArray(
-            String str, String delimiter, String charsToDelete) {
-
-        if (str == null) {
-            return EMPTY_STRING_ARRAY;
-        }
-        if (delimiter == null) {
-            return new String[]{str};
-        }
-
-        List<String> result = new ArrayList<>();
-        if (delimiter.isEmpty()) {
-            for (int i = 0; i < str.length(); i++) {
-                result.add(deleteAny(str.substring(i, i + 1), charsToDelete));
-            }
-        } else {
-            int pos = 0;
-            int delPos;
-            while ((delPos = str.indexOf(delimiter, pos)) != -1) {
-                result.add(deleteAny(str.substring(pos, delPos), charsToDelete));
-                pos = delPos + delimiter.length();
-            }
-            if (str.length() > 0 && pos <= str.length()) {
-                // Add rest of String, but not in case of empty input.
-                result.add(deleteAny(str.substring(pos), charsToDelete));
-            }
-        }
-        return toStringArray(result);
-    }
-
-    public static String deleteAny(String inString, String charsToDelete) {
-        if (!hasLength(inString) || !hasLength(charsToDelete)) {
-            return inString;
-        }
-
-        int lastCharIndex = 0;
-        char[] result = new char[inString.length()];
-        for (int i = 0; i < inString.length(); i++) {
-            char c = inString.charAt(i);
-            if (charsToDelete.indexOf(c) == -1) {
-                result[lastCharIndex++] = c;
-            }
-        }
-        if (lastCharIndex == inString.length()) {
-            return inString;
-        }
-        return new String(result, 0, lastCharIndex);
-    }
-
     public static String[] toStringArray(Collection<String> collection) {
         return (!CollectionUtils.isEmpty(collection) ? collection.toArray(EMPTY_STRING_ARRAY) : EMPTY_STRING_ARRAY);
     }
 
-    /**
-     * Copy the given {@link Enumeration} into a {@code String} array.
-     * <p>The {@code Enumeration} must contain {@code String} elements only.
-     *
-     * @param enumeration the {@code Enumeration} to copy
-     *                    (potentially {@code null} or empty)
-     * @return the resulting {@code String} array
-     */
-    public static String[] toStringArray(Enumeration<String> enumeration) {
-        return (enumeration != null ? toStringArray(Collections.list(enumeration)) : EMPTY_STRING_ARRAY);
-    }
 
     public static String arrayToDelimitedString(Object[] arr, String delim) {
         if (ObjectUtils.isEmpty(arr)) {
@@ -421,21 +252,18 @@ public class StringUtils {
      * @return 路径
      */
     public static String removeHostFromUrl(String url) {
-        if (StringUtils.isEmpty(url)) return "";
         try {
-            URI uri = new URI(url);
-            URI newUri = new URI(
-                    null,
-                    null,
-                    null,
-                    0,
-                    uri.getPath(),
-                    uri.getQuery(),
-                    uri.getFragment()
-            );
-
-            return newUri.toString();
-        } catch (URISyntaxException ignored) {
+            StringBuilder stringBuilder = new StringBuilder();
+            URL urlObj = new URL(url);
+            if (urlObj.getPath() != null) {
+                stringBuilder.append(urlObj.getPath());
+            }
+            if (urlObj.getQuery() != null) {
+                stringBuilder.append("?");
+                stringBuilder.append(urlObj.getQuery());
+            }
+            return stringBuilder.toString();
+        } catch (Exception e) {
         }
         return url;
     }
